@@ -4,6 +4,8 @@
 	  in files it has not yet read in.
 	- threaded hash table test. 
 	- unit test runs lock-verify afterwards and checks result.
+	- need writelock to update data on hash_insert.
+	- message cache code, msgreply code.
 
 21 March 2007: Wouter
 	- unit test of hash table, fixup locking problem in table_grow().
